<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_200"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/Tv_Titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/escreva_noticia"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Ed_Titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/white"
            android:hint="@string/hint_titulo"
            android:maxLines="1"
            android:padding="12dp" />

        <EditText
            android:id="@+id/Ed_Noticia"
            android:layout_width="match_parent"
            android:layout_height="250sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@color/white"
            android:gravity="start"
            android:hint="@string/hint_escreva_noticia"
            android:inputType="textMultiLine"
            android:padding="12dp" />

        <EditText
            android:id="@+id/Ed_Data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@color/white"
            android:hint="@string/hint_data_publicação"
            android:maxLength="10"
            android:padding="12dp" />

        <EditText
            android:id="@+id/Ed_Autor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@color/white"
            android:hint="@string/hint_autor"
            android:maxLines="1"
            android:padding="12dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Btn_Publicar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:background="@color/teal_700"
            android:text="@string/txt_publicar"
            android:textColor="@color/white" />


    </LinearLayout>

</ScrollView>